--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,15 +87,15 @@ aside {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-aside {
+aside div {
     margin-bottom: 32px;
     color: #ffffff;
 }
-aside h3 {
+aside div h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-aside img {
+aside div img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
